# pythonocc-numpy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.bat  environment.yml  pyproject.toml  test_bridge.py
.github/workflows/: release.yml  update-pip-index.yml
src/: point_bridge.cpp
src/csrc/: g3d.cpp  main.cpp  mds.cpp  mvs.cpp  point_bridge.cpp  poly.cpp
src/occ_numpy_bridge/: __init__.py  base.py  g3d_arrayofpoints.py  g3d_arrayoftriangles.py  graphics3d.py  helper.py  mvs_mesh.py  mvs_nodalcolorprsbuilder.py  occ_bridge.cp312-win_amd64.pyd  poly.py  poly_triangulation.py
tests/: test_bridge.py  test_g3d_arrayofpoints.py  test_g3d_arrayoftriangles.py  test_mesh.py  test_mvs_mesh.py  test_mvs_nodalcolorprsbuilder.py  test_pcl.py  test_poly_triangulation.py
