[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.10.0",
    "pybind11-stubgen",
    "numpy>=1.21.0",
    "setuptools-scm"
]
build-backend = "scikit_build_core.build"

[project]
name = "occ-numpy-bridge"
description = "Fast Bridge between pythonocc-core und NumPy"
readme = "README.md"
license-files = ["LICENSE.txt"]
license = "BSD-3-Clause"
dynamic = ["version"]
authors = [
    { name = "Simon Klein" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
]
keywords = [
    "opencascade",
    "pythonocc",
    "numpy",
    "pybind11",
    "cad",
    "geometry",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = ["pytest"]
dev = [
    "pytest",
    "pybind11-stubgen",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- SCIKIT-BUILD-CORE KONFIGURATION ---
[tool.scikit-build]
cmake.version = ">=3.18"
cmake.build-type = "Release"
wheel.packages = ["src/occ_numpy_bridge"]
install.components = ["python_modules"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/occ_numpy_bridge/_version.py"]

[project.urls]
Homepage = "https://github.com/kleinsimon/pythonocc-numpy"
Repository = "https://github.com/kleinsimon/pythonocc-numpy"
Issues = "https://github.com/kleinsimon/pythonocc-numpy/issues"
Releases = "https://github.com/kleinsimon/pythonocc-numpy/releases"

[tool.setuptools_scm]
write_to = "src/occ_numpy_bridge/_version.py"